# vayou-slint

./: .gitignore  Cargo.toml  README.md  app.rc  build.rs
.github/workflows/: ci.yml
installer/: build.ps1  vayou.nsi
lang/ar/LC_MESSAGES/: vayou.po
lang/de/LC_MESSAGES/: vayou.po
lang/es/LC_MESSAGES/: vayou.po
lang/fr/LC_MESSAGES/: vayou.po
lang/hi/LC_MESSAGES/: vayou.po
lang/it/LC_MESSAGES/: vayou.po
lang/ja/LC_MESSAGES/: vayou.po
lang/ko/LC_MESSAGES/: vayou.po
lang/pt/LC_MESSAGES/: vayou.po
lang/ru/LC_MESSAGES/: vayou.po
lang/zh/LC_MESSAGES/: vayou.po
src/: error.rs  file_assoc.rs  keybindings.rs  main.rs  state.rs  translate_job.rs  update.rs  util.rs  video_render.rs  win.rs
src/bridge/: app.rs  keys.rs  mod.rs  panels.rs  playback.rs  playlist.rs  settings.rs  subtitle.rs  tracks.rs  video.rs  window.rs
src/mpv/: events.rs  ffi.rs  player.rs  types.rs
src/services/: audio_fx.rs  media_info.rs  mod.rs  opensubtitles.rs  playback.rs  playlist.rs  settings.rs  subtitle_extract.rs  tracks.rs  translate.rs  video.rs
tools/: gen-po.cjs
ui/: app.slint  context-menu.slint  icons.slint  settings-panel.slint  state.slint  subtitle-panel.slint  theme.slint  widgets.slint
